lustre/obdclass/linux/linux-sysctl.c
@@ -79,6 +79,7 @@ enum {
         OBD_AT_EXTRA,
         OBD_AT_EARLY_MARGIN,
         OBD_AT_HISTORY,
+	OBD_BULK_TIMEOUT,	/* bulk transfer timeout */
 };
 
 #else
@@ -104,6 +105,7 @@ enum {
 #define OBD_AT_EXTRA            CTL_UNNUMBERED
 #define OBD_AT_EARLY_MARGIN     CTL_UNNUMBERED
 #define OBD_AT_HISTORY          CTL_UNNUMBERED
+#define OBD_BULK_TIMEOUT	CTL_UNNUMBERED
 
 #endif
 
@@ -288,6 +290,10 @@ int LL_PROC_PROTO(proc_alloc_fail_rate)
 }
 #endif
 
+int LL_PROC_PROTO(proc_bulk_timeout)
+{
+	return proc_dointvec(table, write, buffer, lenp, ppos);
+}
 int LL_PROC_PROTO(proc_at_min)
 {
         return ll_proc_dointvec(table, write, filp, buffer, lenp, ppos);
@@ -401,6 +407,14 @@ static struct ctl_table obd_table[] = {
                 .mode     = 0644,
                 .proc_handler = &proc_max_dirty_pages_in_mb
         },
+	{
+		INIT_CTL_NAME(OBD_BULK_TIMEOUT)
+		.procname	= "bulk_timeout",
+		.data		= &bulk_timeout,
+		.maxlen		= sizeof(int),
+		.mode		= 0644,
+		.proc_handler	= &proc_bulk_timeout
+	},
         {
                 INIT_CTL_NAME(OBD_AT_MIN)
                 .procname = "at_min",
